--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <h3>Some kind of game</h3>
                     <p>Italian flour, whole tomato sauce, mozzarella, duck fillet (sous vide) secret sauces from abroad, including hazelnut, leek, cucumber, cilantro</p>
                 </div>
-                <div>
+                <div id="order-btn">
                     <button class="order" id="myBtn">To Order</button>
                 </div>
             </div>
@@ -91,6 +91,9 @@
                     <h3>Chicken with mushrooms</h3>
                     <p>Italian flour, parmesan and cream sauce, mozzarella, dorblu, baked chicken, mushrooms, Bulgarian pepper, oregano</p>
                 </div>
+                <div id="order-btn">
+                    <button class="order" id="myBtn">To Order</button>
+                </div>
             </div>
             <div class="jumbotron filterDiv meat no-onion no-olives" id="pizza">
                 <div class="circle">
@@ -99,6 +102,9 @@
                 <div class="pizza-des">
                     <h3>With Bacon</h3>
                     <p>Italian flour, whole tomato sauce, mozzarella, dorblu, dry-cured bacon, hot pepper, oregano</p>
+                </div>
+                <div id="order-btn">
+                    <button class="order" id="myBtn">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv meat no-onion no-olives" id="pizza">
@@ -109,6 +115,9 @@
                     <h3>Marrakesh</h3>
                     <p>Italian flour, truffle sauce, mozzarella, duck fillet (sous vide), figs, brie, almonds, pomegranate sauce</p>
                 </div>
+                <div id="order-btn">
+                    <button class="order" id="myBtn">To Order</button>
+                </div>
             </div>
             <div class="jumbotron filterDiv child no-onion no-olives" id="pizza">
                 <div class="circle">
@@ -117,6 +126,9 @@
                 <div class="pizza-des">
                     <h3>Salami</h3>
                     <p>Italian flour, mozzarella, whole tomato sauce, premium salami, oregano</p>
+                </div>
+                <div id="order-btn">
+                    <button class="order" id="myBtn">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv meat hot" id="pizza">
@@ -127,6 +139,9 @@
                     <h3>Bavarian</h3>
                     <p>Italian flour, whole tomato sauce, mozzarella, pepperoni, hunting sausages, bell pepper, olives, Pesto sauce, oregano</p>
                 </div>
+                <div id="order-btn">
+                    <button class="order" id="myBtn">To Order</button>
+                </div>
             </div>
             <div class="jumbotron filterDiv cheese veggie child no-olives" id="pizza">
                 <div class="circle">
@@ -135,6 +150,9 @@
                 <div class="pizza-des">
                     <h3>Margarita</h3>
                     <p>Italian flour, whole tomato sauce, mozzarella, tomatoes, pesto sauce, oregano</p>
+                </div>
+                <div id="order-btn">
+                    <button class="order" id="myBtn">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv meat hot no-olives" id="pizza">
@@ -145,6 +163,9 @@
                     <h3>Multi meat</h3>
                     <p>Italian flour, whole tomato sauce, mozzarella, beef, boiled pork, pepperoni, hunting sausages, Bulgarian pepper, Crimean onion, barbecue sauce, oregano</p>
                 </div>
+                <div id="order-btn">
+                    <button class="order" id="myBtn">To Order</button>
+                </div>
             </div>
             <div class="jumbotron filterDiv cheese no-onion no-olives" id="pizza">
                 <div class="circle">
@@ -153,6 +174,9 @@
                 <div class="pizza-des">
                     <h3>With goat cheese</h3>
                     <p>Italian flour, creamy sauce according to someone's grandmother's secret recipe, mozzarella, goat cheese, root vegetables, pine nuts</p>
+                </div>
+                <div id="order-btn">
+                    <button class="order" id="myBtn">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv meat no-onion no-olives" id="pizza">
@@ -163,6 +187,9 @@
                     <h3>Prosciutto</h3>
                     <p>Italian flour, whole tomato sauce, mozzarella, PROSCUITTO, rucolla, cherry tomatoes, sun-dried tomato, capers, oregano, parmesan</p>
                 </div>
+                <div id="order-btn">
+                    <button class="order" id="myBtn">To Order</button>
+                </div>
             </div>
             <div class="jumbotron filterDiv meat child no-olives" id="pizza">
                 <div class="circle">
@@ -171,6 +198,9 @@
                 <div class="pizza-des">
                     <h3>With Turkey</h3>
                     <p>Italian flour, mozzarella, cream sauce, turkey, orange, almonds, mixed greens / arugula, cranberries, orange mustard</p>
+                </div>
+                <div id="order-btn">
+                    <button class="order" id="myBtn">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv cheese veggie no-olives" id="pizza">
@@ -181,6 +211,9 @@
                     <h3>With porcini mushrooms and canterelles</h3>
                     <p>Italian flour, truffle sauce, mozzarella, porcini mushrooms, chanterelles, champignons, sweet onions, green onions</p>
                 </div>
+                <div id="order-btn">
+                    <button class="order" id="myBtn">To Order</button>
+                </div>
             </div>
             <div class="jumbotron filterDiv meat hot no-olives" id="pizza">
                 <div class="circle">
@@ -189,6 +222,9 @@
                 <div class="pizza-des">
                     <h3>Pepperoni</h3>
                     <p>Italian flour, Mozzarella, whole tomato sauce, real Italian pepperoni, hot peppers, capers, oregano</p>
+                </div>
+                <div id="order-btn">
+                    <button class="order" id="myBtn">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv meat no-onion" id="pizza">
@@ -199,6 +235,9 @@
                     <h3>Capricciosa classic</h3>
                     <p>Italian flour, whole tomato sauce, mozzarella, bacon, tomatoes, mushrooms, olives</p>
                 </div>
+                <div id="order-btn">
+                    <button class="order" id="myBtn">To Order</button>
+                </div>
             </div>
             <div class="jumbotron filterDiv cheese veggie no-onion no-olives" id="pizza">
                 <div class="circle">
@@ -207,6 +246,9 @@
                 <div class="pizza-des">
                     <h3>Premium cheese</h3>
                     <p>Italian flour, cream and parmesan sauce, mozzarella, DorBlue, parmesan, walnut, cranberry</p>
+                </div>
+                <div id="order-btn">
+                    <button class="order" id="myBtn">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv meat cheese no-olives" id="pizza">
@@ -217,6 +259,9 @@
                     <h3>With lamb</h3>
                     <p>Italian flour, whole tomato sauce, mozzarella, lamb, baked eggplant, tomato salsa, sweet onion, basil, secret sauce</p>
                 </div>
+                <div id="order-btn">
+                    <button class="order" id="myBtn">To Order</button>
+                </div>
             </div>
             <div class="jumbotron filterDiv cheese meat no-olives" id="pizza">
                 <div class="circle">
@@ -226,6 +271,9 @@
                     <h3>With roast beef and porcini mushrooms</h3>
                     <p>Italian flour, truffle sauce, mozzarella, roast beef, porcini mushrooms, tomatoes, green onions</p>
                 </div>
+                <div id="order-btn">
+                    <button class="order" id="myBtn">To Order</button>
+                </div>
             </div>
             <div class="jumbotron filterDiv meat child no-onion no-olives" id="pizza">
                 <div class="circle">
@@ -234,6 +282,9 @@
                 <div class="pizza-des">
                     <h3>Chicken with pineapple</h3>
                     <p>Italian flour, whole tomato sauce, mozzarella, baked chicken, pineapple, bell pepper, orange mustard, cranberry, oregano</p>
+                </div>
+                <div id="order-btn">
+                    <button class="order" id="myBtn">To Order</button>
                 </div>
             </div>
         </div>
@@ -312,7 +363,7 @@
                 </div>
             </div>
             <div class="container-fluid">
-
+                <button class="checkout">Checkout</button>
             </div>
 
         </div>
