--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
                     </div>
                     <div id="icon">
                         <button class="btn" onclick="filterSelection('no-mushroom')"><img id="mushroom" src="img/icons/mushroom-color.svg" alt="no mushroom"></button>
-                        <span class="caption">Without mushroom</span>
+                        <span class="caption">Without<br>mushroom</span>
                     </div>
                     <div id="icon">
                         <button class="btn" onclick="filterSelection('no-olives')"><img id="olives" src="img/icons/olives-color.svg" alt="no olives"></button>
-                        <span class="caption">Without olives</span>
+                        <span class="caption">Without<br>olives</span>
                     </div>
                     <div id="icon">
                         <button class="btn" onclick="filterSelection('no-onions')"><img id="onions" src="img/icons/onions-color.svg" alt="no onions"></button>
-                        <span class="caption">Without onions</span>
+                        <span class="caption">Without<br>onions</span>
                     </div>
                     <div id="icon">
                         <button class="btn" onclick="filterSelection('veggie')"><img id="veggie" src="img/icons/veggie-color.svg" alt="veggie"></button>
