add details to modal box

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <p>Italian flour, whole tomato sauce, mozzarella, duck fillet (sous vide) secret sauces from abroad, including hazelnut, leek, cucumber, cilantro</p>
                 </div>
                 <div id="order-btn">
-                    <button class="order" id="myBtn">To Order</button>
+                    <button class="order" id="myBtn2">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv cheese meat child no-olives" id="pizza">
@@ -92,7 +92,7 @@
                     <p>Italian flour, parmesan and cream sauce, mozzarella, dorblu, baked chicken, mushrooms, Bulgarian pepper, oregano</p>
                 </div>
                 <div id="order-btn">
-                    <button class="order" id="myBtn">To Order</button>
+                    <button class="order" id="myBtn3">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv meat no-onion no-olives" id="pizza">
@@ -104,7 +104,7 @@
                     <p>Italian flour, whole tomato sauce, mozzarella, dorblu, dry-cured bacon, hot pepper, oregano</p>
                 </div>
                 <div id="order-btn">
-                    <button class="order" id="myBtn">To Order</button>
+                    <button class="order" id="myBtn4">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv meat no-onion no-olives" id="pizza">
@@ -116,7 +116,7 @@
                     <p>Italian flour, truffle sauce, mozzarella, duck fillet (sous vide), figs, brie, almonds, pomegranate sauce</p>
                 </div>
                 <div id="order-btn">
-                    <button class="order" id="myBtn">To Order</button>
+                    <button class="order" id="myBtn5">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv child no-onion no-olives" id="pizza">
@@ -128,7 +128,7 @@
                     <p>Italian flour, mozzarella, whole tomato sauce, premium salami, oregano</p>
                 </div>
                 <div id="order-btn">
-                    <button class="order" id="myBtn">To Order</button>
+                    <button class="order" id="myBtn6">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv meat hot" id="pizza">
@@ -140,7 +140,7 @@
                     <p>Italian flour, whole tomato sauce, mozzarella, pepperoni, hunting sausages, bell pepper, olives, Pesto sauce, oregano</p>
                 </div>
                 <div id="order-btn">
-                    <button class="order" id="myBtn">To Order</button>
+                    <button class="order" id="myBtn9">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv cheese veggie child no-olives" id="pizza">
@@ -152,7 +152,7 @@
                     <p>Italian flour, whole tomato sauce, mozzarella, tomatoes, pesto sauce, oregano</p>
                 </div>
                 <div id="order-btn">
-                    <button class="order" id="myBtn">To Order</button>
+                    <button class="order" id="myBtn8">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv meat hot no-olives" id="pizza">
@@ -164,7 +164,7 @@
                     <p>Italian flour, whole tomato sauce, mozzarella, beef, boiled pork, pepperoni, hunting sausages, Bulgarian pepper, Crimean onion, barbecue sauce, oregano</p>
                 </div>
                 <div id="order-btn">
-                    <button class="order" id="myBtn">To Order</button>
+                    <button class="order" id="myBtn7">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv cheese no-onion no-olives" id="pizza">
@@ -176,7 +176,7 @@
                     <p>Italian flour, creamy sauce according to someone's grandmother's secret recipe, mozzarella, goat cheese, root vegetables, pine nuts</p>
                 </div>
                 <div id="order-btn">
-                    <button class="order" id="myBtn">To Order</button>
+                    <button class="order" id="myBtn10">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv meat no-onion no-olives" id="pizza">
@@ -188,7 +188,7 @@
                     <p>Italian flour, whole tomato sauce, mozzarella, PROSCUITTO, rucolla, cherry tomatoes, sun-dried tomato, capers, oregano, parmesan</p>
                 </div>
                 <div id="order-btn">
-                    <button class="order" id="myBtn">To Order</button>
+                    <button class="order" id="myBtn11">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv meat child no-olives" id="pizza">
@@ -200,7 +200,7 @@
                     <p>Italian flour, mozzarella, cream sauce, turkey, orange, almonds, mixed greens / arugula, cranberries, orange mustard</p>
                 </div>
                 <div id="order-btn">
-                    <button class="order" id="myBtn">To Order</button>
+                    <button class="order" id="myBtn12">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv cheese veggie no-olives" id="pizza">
@@ -212,7 +212,7 @@
                     <p>Italian flour, truffle sauce, mozzarella, porcini mushrooms, chanterelles, champignons, sweet onions, green onions</p>
                 </div>
                 <div id="order-btn">
-                    <button class="order" id="myBtn">To Order</button>
+                    <button class="order" id="myBtn13">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv meat hot no-olives" id="pizza">
@@ -224,7 +224,7 @@
                     <p>Italian flour, Mozzarella, whole tomato sauce, real Italian pepperoni, hot peppers, capers, oregano</p>
                 </div>
                 <div id="order-btn">
-                    <button class="order" id="myBtn">To Order</button>
+                    <button class="order" id="myBtn14">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv meat no-onion" id="pizza">
@@ -236,7 +236,7 @@
                     <p>Italian flour, whole tomato sauce, mozzarella, bacon, tomatoes, mushrooms, olives</p>
                 </div>
                 <div id="order-btn">
-                    <button class="order" id="myBtn">To Order</button>
+                    <button class="order" id="myBtn15">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv cheese veggie no-onion no-olives" id="pizza">
@@ -248,7 +248,7 @@
                     <p>Italian flour, cream and parmesan sauce, mozzarella, DorBlue, parmesan, walnut, cranberry</p>
                 </div>
                 <div id="order-btn">
-                    <button class="order" id="myBtn">To Order</button>
+                    <button class="order" id="myBtn16">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv meat cheese no-olives" id="pizza">
@@ -260,7 +260,7 @@
                     <p>Italian flour, whole tomato sauce, mozzarella, lamb, baked eggplant, tomato salsa, sweet onion, basil, secret sauce</p>
                 </div>
                 <div id="order-btn">
-                    <button class="order" id="myBtn">To Order</button>
+                    <button class="order" id="myBtn17">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv cheese meat no-olives" id="pizza">
@@ -272,7 +272,7 @@
                     <p>Italian flour, truffle sauce, mozzarella, roast beef, porcini mushrooms, tomatoes, green onions</p>
                 </div>
                 <div id="order-btn">
-                    <button class="order" id="myBtn">To Order</button>
+                    <button class="order" id="myBtn18">To Order</button>
                 </div>
             </div>
             <div class="jumbotron filterDiv meat child no-onion no-olives" id="pizza">
@@ -284,7 +284,7 @@
                     <p>Italian flour, whole tomato sauce, mozzarella, baked chicken, pineapple, bell pepper, orange mustard, cranberry, oregano</p>
                 </div>
                 <div id="order-btn">
-                    <button class="order" id="myBtn">To Order</button>
+                    <button class="order" id="myBtn1">To Order</button>
                 </div>
             </div>
         </div>
@@ -296,11 +296,11 @@
         <!-- Modal Box content -->
         <div class="modal-content">
             <span class="close">&times;</span>
-            <div class="container-flex" id="pizza-sel">
+            <div class="container-flex pizza-sel" id="select">
                 <!-- <img id="selected-pizza" src="img/pizza/pizza-3.jpeg" alt=""> -->
 
             </div>
-            <h3>Type</h3>
+            <h3 id="chgtext">Type</h3>
             <div id="pizza-size">
                 <h4>Pizza Size</h4>
                 <ul>
