ficx hide modal

--- a/index.html
+++ b/index.html
@@ -337,31 +337,31 @@
                 <ul>
                     <li>
                         <input type="checkbox" id="topping1" name="topping1" value="Bacon">
-                        <label for="topping1"> Bacon</label><br>
+                        <label for="topping1"> Bacon</label><span class="price">price</span>
                     </li>
                     <li>
                         <input type="checkbox" id="topping2" name="topping2" value="Cheddar">
-                        <label for="topping2"> Cheddar</label><br>
+                        <label for="topping2"> Cheddar</label><span class="price">price</span>
                     </li>
                     <li>
                         <input type="checkbox" id="topping3" name="topping3" value="Jalapeno">
-                        <label for="topping3"> Jalapeno</label><br>
+                        <label for="topping3"> Jalapeno</label><span class="price">price</span>
                     </li>
                     <li>
                         <input type="checkbox" id="topping4" name="topping4" value="Ground Beef">
-                        <label for="topping4"> Ground Beef</label><br>
+                        <label for="topping4"> Ground Beef</label><span class="price">price</span>
                     </li>
                     <li>
                         <input type="checkbox" id="topping5" name="topping5" value="Mozzarella">
-                        <label for="topping5"> Mozzarella</label><br>
+                        <label for="topping5"> Mozzarella</label><span class="price">price</span>
                     </li>
                     <li>
                         <input type="checkbox" id="topping6" name="topping6" value="Pepperoni">
-                        <label for="topping6"> Pepperoni</label><br>
+                        <label for="topping6"> Pepperoni</label><span class="price">price</span>
                     </li>
                     <li>
                         <input type="checkbox" id="topping7" name="topping7" value="Beef Steak Pieces">
-                        <label for="topping7"> Beef Steak Pieces</label><br>
+                        <label for="topping7"> Beef Steak Pieces</label><span class="price">price</span>
                     </li>
                 </ul>
 
