style checkout form

--- a/index.html
+++ b/index.html
@@ -394,16 +394,16 @@
     </div>
     <div id="checkout" class="modal">
         <div class="modal-content" id="checkout-content">
-            <div class="choise">
-                <h2>Your Order is:</h2>
+            <div class="pizza-choice">
+                <h2>Your Order:</h2>
                 <div id="your-orders">
                     <table class="table table-sm  pizzatable">
                         <thead>
                             <tr>
-                                <th scope="col">Name</th>
+                                <th scope="col">Pizza</th>
                                 <th scope="col">Size</th>
-                                <th scope="col">Crust</th>
-                                <th scope="col">Topping</th>
+                                <th scope="col">Base</th>
+                                <th scope="col">Toppings</th>
                                 <th scope="col">Total</th>
                             </tr>
                         </thead>
@@ -419,7 +419,7 @@
                     </table>
                     <p id="pizzatotal"></p>
                     <p id="totalbill"></p>
-                    <p id="addedprice">Delivery will cost sh. 200</p>
+                    <p id="addedprice">Delivery fee: ksh. 350</p>
                     <p id="finallmessage"></p>
                 </div>
                 <button class="btn btn-orange addPizza">Add Pizza</button>
